[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alanube"
version = "0.3.1"
authors = [
  { name = "Wilmer Martinez", email = "info@wilmermartinez.dev" },
]
description = "Python library to connect with Alanube API"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [# https://pypi.org/classifiers/

    # "Development Status :: 1 - Planning",
    # "Development Status :: 2 - Pre-Alpha",
    # "Development Status :: 3 - Alpha",
    # "Development Status :: 4 - Beta",
    "Development Status :: 5 - Production/Stable",
    # "Development Status :: 6 - Mature",
    # "Development Status :: 7 - Inactive",

    "Intended Audience :: Developers",

    "Topic :: Software Development :: Libraries :: Python Modules",

    "Environment :: Web Environment",

    "License :: OSI Approved :: MIT License",

    "Natural Language :: English",
    "Natural Language :: Spanish",

    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
  "requests",
]
keywords = [
  "alanube",
  "api",
  "dgii",
  "ncf",
  "electronic billing",
  "electronic bill",
  "billing",
  "bill",
  "invoice",
  "facturación electrónica",
]

[project.urls]
Homepage = "https://github.com/wilmerm/alanube-python"
Issues = "https://github.com/wilmerm/alanube-python/issues"
Repository = "https://github.com/wilmerm/alanube-python"
